<resources>
    <string name="abandonar">Abandonar</string>
    <string name="abre_calendario">Abrir calendario..</string>
    <string name="aceptar">Aceptar</string>
    <string name="anadido">Añadido</string>
    <string name="añadir">Añadir</string>
    <string name="app_name">TeamManager</string>
    <string name="apuntarse">¿Apuntarse?</string>
    <string name="asistencias">Asistencias</string>
    <string name="bayern">Babiera</string>
    <string name="best_evaluated">Mejor valorado</string>
    <string name="borrar">Borrar</string>
    <string name="buscar_equipo">Buscar equipo</string>
    <string name="calendario">Calendar.</string>
    <string name="cambiaFoto">Cambiar Foto</string>
    <string name="cambiarPos">Cambiar Posición</string>
    <string name="captain">Capitán</string>
    <string name="cero">0</string>
    <string name="clasificacion">Clasific.</string>
    <string name="comienzo">Comienzo</string>
    <string name="contra">GC</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmados">Confirmados:</string>
    <string name="crearEquipo">Crear Equipo</string>
    <string name="crearEvento">Crear Evento</string>
    <string name="crearPartido">Crear Partido</string>
    <string name="dorsal">Dorsal</string>
    <string name="duracion">Duración(Hs)</string>
    <string name="empatados">Emp</string>
    <string name="equipo">Equipo</string>
    <string name="equipo_vacio">El nombre del equipo no puede ser vacío</string>
    <string name="eventual">Eventual</string>
    <string name="expulsiones">Expulsiones</string>
    <string name="favor">GF</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_incorrecta">La fecha no puede ser vacía</string>
    <string name="finali">Final</string>
    <string name="ganados">Gan</string>
    <string name="guardar">Guardar</string>
    <string name="goles">Goles</string>
    <string name="hora">Hora</string>
    <string name="hora_vacia">La hora no puede ser vacía</string>
    <string name="invita_amigos">Invitar amigos</string>
    <string name="jugador">Jugador</string>
    <string name="jugados">Jug</string>
    <string name="llamar">Llamar</string>
    <string name="localizacion">Localización</string>
    <string name="login">Identificarse</string>
    <string name="mantenerLoggeado">Mantener Loggeado</string>
    <string name="mensual">Mensual</string>
    <string name="nombre_equipo">Nombre del equipo</string>
    <string name="nombre_vacio">El nombre de jugador no puede estar vacío</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="partidos_jugados">Partidos Jugados</string>
    <string name="pending">Pendientes</string>
    <string name="perdidos">Per</string>
    <string name="plantilla">Plantilla</string>
    <string name="partidos">Partidos:</string>
    <string name="password_vacio">El password no puede ser vacío</string>
    <string name="posicion">Posición</string>
    <string name="prox_part">Próximo partido</string>
    <string name="prox_rival">Próximo Rival:</string>
    <string name="puntos">Pts</string>
    <string name="registra_partido">Regista Partido</string>
    <string name="resultado">Resultado</string>
    <string name="rival_vacio">El nombre del rival no puede ser vacío</string>
    <string name="semanal">Semanal</string>
    <string name="signin">Regirstrarse</string>
    <string name="sin_equipo">Jugador sin equipo</string>
    <string name="tb_apuntarse">Acudo</string>
    <string name="tb_borrarse">Falto</string>
    <string name="team_records">Récords del grupo</string>
    <string name="telefono">Teléfono</string>
    <string name="telefono_vacio">El número de teléfono no puede ser vacío</string>
    <string name="titulo">Título</string>
    <string name="top_scorer">Pichichi</string>
    <string name="vacio">-</string>
    <string name="valoracion">Valoración</string>
    <string name="volver">Volver</string>
</resources>
