<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <!--Cambiar los dos linearLayout por un RecyclerView con GridLayoutManager-->

    <GridLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="8"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/equipo"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/puntos"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/jugados"
            android:id="@+id/textView14" />

        <TextView
            android:layout_column="3"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ganados"
            android:id="@+id/textView16" />

        <TextView
            android:layout_column="4"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/empatados"
            android:id="@+id/textView19" />

        <TextView
            android:layout_column="5"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/perdidos"
            android:id="@+id/textView20" />

        <TextView
            android:layout_column="6"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/favor"
            android:id="@+id/textView21" />

        <TextView
            android:layout_column="7"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/contra"
            android:id="@+id/textView22" />
    </GridLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rv_teams_layout"
        android:scrollbars="vertical"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true" />


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="49dp"
            android:layout_below="@+id/rv_teams_layout"
            android:id="@+id/frameLayout">



        <include layout="@layout/match_details_layout"
            android:id="@+id/include"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registra_partido"
            android:id="@+id/b_registra_partido"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>



</RelativeLayout>