<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/dim_foreground_disabled_material_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipo"
                android:id="@+id/textView4" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jugador"
                android:onClick="statsJugador"
                android:id="@+id/b_stats_jug" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipo"
                android:onClick="statsEquipo"
                android:id="@+id/b_stats_eq" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calendario"
                android:text="@string/calendario"
                android:id="@+id/b_calendario" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clasificacion"
                android:onClick="clasificacion"
                android:id="@+id/b_calsif" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:onClick="volver"
                android:id="@+id/b_volver" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prox_part"
                android:id="@+id/textView5" />

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.movildat.lucassegarra.teammanager.NextMatchFragment"
                android:id="@+id/fr_next_match"
                tools:layout="@layout/next_match_view" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>