<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugados"
            android:id="@+id/textView43"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_jugados"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="bottom|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganados"
            android:id="@+id/textView44"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_ganados"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="bottom|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empatados"
            android:id="@+id/textView45"
            android:layout_row="2"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_empatados"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="bottom|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perdidos"
            android:id="@+id/textView46"
            android:layout_row="3"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_perdidos"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="bottom|right"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:id="@+id/textView47"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_pendientes"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="bottom|right"/>


    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="2"
        android:background="@color/myGolden">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_records"
            android:id="@+id/textView48"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goles"
            android:id="@+id/textView49"
            android:layout_column="0"
            android:layout_row="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_pichichi"
            android:layout_gravity="bottom|right"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asistencias"
            android:id="@+id/textView50"
            android:layout_column="0"
            android:layout_row="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:id="@+id/tv_tsv_asistente"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="bottom|right"/>

    </GridLayout>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plantilla"
            android:id="@+id/textView51" />
    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_all_players_layout"
        android:background="@color/colorPrimary"
        android:scrollbars="vertical"/>


</LinearLayout>