<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="6"
            android:columnCount="2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/textView55" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_ev_titulo"
                android:layout_row="0"
                android:layout_column="1"
                android:minEms="5"
                android:layout_gravity="bottom|right"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localizacion"
                android:id="@+id/textView56"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="left|top" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_ev_lug"
                android:layout_row="1"
                android:layout_column="1"
                android:minEms="5"
                android:layout_gravity="bottom|right"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comienzo"
                android:id="@+id/textView57"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="left|top" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dp_ini"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="bottom|right"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finali"
                android:id="@+id/textView58"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="left|top" />
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dp_fin"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="bottom|right"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion"
                android:layout_row="4"
                android:layout_column="0"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/np_ev_length"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="bottom|right"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventual"
                    android:id="@+id/radioButton4" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mensual"
                    android:id="@+id/radioButton5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semanal"
                    android:id="@+id/radioButton6" />
            </RadioGroup>

            <Button
                android:layout_column="1"
                android:layout_row="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/b_ev_guard"
                android:onClick="registraEvento"
                android:layout_gravity="center_horizontal|bottom" />


        </GridLayout>

    </ScrollView>

</FrameLayout>